# peril.lol

./: .gitignore  .htaccess  .prettierignore  .prettierrc  404.html  CNAME  Gemfile  LICENSE  README.md  _config.yml  astro.config.mjs  eslint.config.js  flow  generate-logo.js  index.html  m.css  next.config.ts  og-preview.html  package-lock.json  package.json  photo.html  photos.html  photos.json  repomix-output.txt  resume.md  style.css  styles.css  tsconfig.json  update-photos.js  vercel.json
.astro/: data-store.json  settings.json
.astro/collections/: blog.schema.json
.github/: FUNDING.yml
.github/workflows/: deploy.yml
.well-known/: discord
_data/: portfolio.yaml
_includes/: head.html
_sass/: _home.scss
about/: index.html
brand/: index.html
cohere/: index.html  install.sh  tailwind.config.ts
cohere/app/: globals.css
content/blog/: agency-is-a-trap.md  god-is-a-manmade-machine.md  hello-world.md  (+2 more)
css/: brand.css  ghost-float.css  now-playing-widget.css  styles.css
donate/: index.html
impressum/: index.html
js/: config.js  gallery.js  main.js  now-playing-widget.js  now-playing.js  photo-utils.js  router.js  script.js
matcha/: 404.html  CNAME  README.md  bun.lockb  index.html  index.txt  matcha  next.config.js  next.config.mjs  package.json  repomix-output.txt  tailwind.config.ts
music/: index.html
photos/: index.html
public/: CNAME
scripts/: .gitignore  Cargo.toml  README.md  convert-photos.sh  convert-photos.ts  generate-og.tsx  photo-dimensions.ts
scripts/src/: main.rs
src/: content.config.ts  m.scss  main.rs  util.ts
(+138 files in other folders)
