[package]
name = "photo-metadata"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate-photos"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
exif = { package = "kamadak-exif", version = "0.5" }